re PR c++/48132 ([C++0x] Internal compiler error on array of std::complex with -std=c++0x)

PR c++/48132
	* decl.c (check_array_designated_initializer): Allow integer index.
	(reshape_init_array_1): Set index on the elements.

From-SVN: r171068